# winerror

./: .gitignore  Cargo.toml  README.md
data/: hresults.txt
src/: main.rs
winerror/: Cargo.toml
winerror/data/: com.txt  d2d.txt  d3d11.txt  dxgi.txt  ntstatus.txt  win32err.txt  wincodec.txt
winerror/src/: main.rs
winerror_core/: Cargo.toml
winerror_core/src/: lib.rs
